--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ itertools = "0.12.1"
 chrono = "0.4.35"
 strum = { version = "0.26.2" , features = ["derive"]}
 rayon = "1.10.0"
+anyhow = "1.0.81"
+num-traits = "0.2.18"
