--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ strum = { version = "0.26.2" , features = ["derive"]}
 rayon = "1.10.0"
 anyhow = "1.0.81"
 num-traits = "0.2.18"
+notify = "6.1.1"
 
 [lints.rust]
 unused_variables = "warn"
