--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rayon = "1.10.0"
 anyhow = "1.0.81"
 num-traits = "0.2.18"
 notify = "6.1.1"
+regex = "1.10.4"
 
 [lints.rust]
 unused_variables = "warn"
